Include comment for running script

--- a/static/azure.hbs
+++ b/static/azure.hbs
@@ -21,4 +21,6 @@ steps:
   # # Start local server
   # - script: npm run start & npx wait-on http://localhost:3000
 
+  # replace below with command you want to run, example for running a script below
+  # - script: node myScript.js
   - script: npm test
