--- a/static/bitbucket.hbs
+++ b/static/bitbucket.hbs
@@ -9,4 +9,7 @@ pipelines:
           - npm install
           ## Start local server
           # - npm run start & npx wait-on http://localhost:3000
+
+          # replace below with command you want to run, example for running a script below
+          # - node myScript.js
           - npm test
