--- a/static/circleci.hbs
+++ b/static/circleci.hbs
@@ -22,6 +22,9 @@ jobs:
             # # Start local server
             # npm run start & 
             # npx wait-on http://localhost:3000
+
+            # replace below with command you want to run, example for running a script below
+            # node myScript.js
             npm test
 
 # # example for running on a schedule, edit to suit your use case
