--- a/static/github.hbs
+++ b/static/github.hbs
@@ -36,4 +36,6 @@ jobs:
       # - name: Start local server
       #   run: npm run start & npx wait-on http://localhost:3000
 
+      # replace below with command you want to run, example for running a script below
+      # - run: node myScript.js
       - run: npm test
