--- a/static/bitbucket.hbs
+++ b/static/bitbucket.hbs
@@ -1,19 +1,27 @@
 pipelines:
   default:
     - step:
+        {{#if qawolf}}
+        name: QA Wolf Tests
+        {{else}}
         name: Playwright Tests
+        {{/if}}
         image: qawolf/playwright-ci:v{{{version}}}
         caches:
           - node
         script:
           - npm install
+        
           ## Start local server
           # - npm run start & npx wait-on http://localhost:3000
-
-          {{#if qawolf}}
-          - npx qawolf test
-          {{else}}
+        {{#if qawolf}}
+          - QAW_ARTIFACT_PATH=artifacts npx qawolf test --headless
+        {{else}}
           # replace below with command you want to run, example for running a script below
           # - node myScript.js
           - npm test
-          {{/if}}
+        {{/if}}
+        {{#if qawolf}}
+        artifacts:
+          - artifacts/**
+        {{/if}}
