Install ffmpeg for qawolf

--- a/static/azure.hbs
+++ b/static/azure.hbs
@@ -14,6 +14,10 @@ steps:
       sudo apt-get install libgbm1
       # webkit dependencies
       sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2 libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0 libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-2.1-6 libnotify4 libvpx5 libxslt1.1
+      {{#if qawolf}}
+      # ffmpeg
+      sudo apt-get install -y ffmpeg
+      {{/if}}
     displayName: "Install browser dependencies"
 
   - script: npm install
@@ -25,6 +29,7 @@ steps:
   - script: npx qawolf test --headless
     env:
       # configure tests with environment variables
+      FFMPEG_PATH: /usr/bin/ffmpeg # for recording video
       QAW_ARTIFACT_PATH: $(System.DefaultWorkingDirectory)/artifacts
 
   - publish: $(System.DefaultWorkingDirectory)/artifacts
