--- a/static/circleci.hbs
+++ b/static/circleci.hbs
@@ -26,6 +26,7 @@ jobs:
             npx qawolf test --headless
           environment:
             # configure tests with environment variables
+            FFMPEG_PATH: /usr/bin/ffmpeg # for recording video
             QAW_ARTIFACT_PATH: /tmp/artifacts
       - store_artifacts:
           path: /tmp/artifacts
