--- a/static/github.hbs
+++ b/static/github.hbs
@@ -23,6 +23,10 @@ jobs:
           sudo apt-get install libgbm1
           # webkit dependencies
           sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2 libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0 libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-2.1-6 libnotify4 libvpx5 libxslt1.1
+          {{#if qawolf}}
+          # ffmpeg
+          sudo apt-get install -y ffmpeg
+          {{/if}}
 
       - uses: actions/checkout@v2
 
@@ -44,6 +48,7 @@ jobs:
       - run: npx qawolf test --headless
         env:
           # configure tests with environment variables
+          FFMPEG_PATH: /usr/bin/ffmpeg # for recording video
           QAW_ARTIFACT_PATH: $\{{ github.workspace }}/artifacts
           # you can also use GitHub secrets for environment variables
           # https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets
