--- a/static/gitlab.hbs
+++ b/static/gitlab.hbs
@@ -14,6 +14,7 @@ qawolf:
 
   variables:
     # configure tests with environment variables
+    FFMPEG_PATH: /usr/bin/ffmpeg # for recording video
     QAW_ARTIFACT_PATH: $CI_PROJECT_DIR/artifacts
   
   artifacts:
