--- a/static/jenkins.hbs
+++ b/static/jenkins.hbs
@@ -14,6 +14,7 @@ pipeline {
             {{#if qawolf}}
             environment { 
                 // configure tests with environment variables
+                FFMPEG_PATH = '/usr/bin/ffmpeg' // for recording video
                 QAW_ARTIFACT_PATH = './artifacts'
             }
             {{/if}}
