--- a/static/github.hbs
+++ b/static/github.hbs
@@ -16,21 +16,11 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          # chromium dependencies
-          sudo apt-get install libgbm1
-          # webkit dependencies
-          sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2 libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0 libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-2.1-6 libnotify4 libvpx5 libxslt1.1
-          {{#if qawolf}}
-          # ffmpeg
-          sudo apt-get install -y ffmpeg
-          {{/if}}
-
       - uses: actions/checkout@v2
 
       - uses: actions/setup-node@v1
+
+      - uses: microsoft/playwright-github-action@v1
 
       - uses: actions/cache@v1
         with:
